manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodeapp
  name: finaldeployment
  namespace: final-demo-ns
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nodeapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodeapp
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: node-container
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nodeapp
  name: nodesvc
  namespace: final-demo-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: nodeapp
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 2
  name: nodeingress
  namespace: final-demo-ns
spec:
  ingressClassName: nginx
  rules:
  - host: kedar.devops-tools.apps.abgkubernetes.com
    http:
      paths:
      - backend:
          service:
            name: nodesvc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
